<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Smoothie\nSolution</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="guest">Enter as Guest</string>
    <string name="register">Register as New User</string>
    <string name="login">Login to Existing Account</string>
    <string name="title_activity_register">Register</string>
    <string name="signup_text">Register for The Smoothie Solution</string>
    <string name="name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="password2">Re-enter Password</string>
    <string name="signup">Sign Up</string>
    <string name="hint1">Email Address</string>
    <string name="hint2">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button">Login</string>
    <string name="title_activity_recipes">Smoothie Recipes</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
    <string name="login_recipes">Login</string>
    <string name="view_all">View All</string>
    <string name="title_activity_details">Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_favorites">Favorites</string>

</resources>
