<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Recipes" >

    
    	<Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/view_all"
        android:id = "@+id/logout"/>
    	
    	<Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/logout"
        android:id = "@+id/logout"
	    android:layout_alignParentRight="true"/>
    	    		
	<ListView
	    android:layout_width = "match_parent"
	    android:layout_height = "300dp" 
	    android:id="@+id/listview"
	    android:layout_below="@id/logout"
	    />
	
	
    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/categories"
        android:layout_alignParentBottom="true"/>
    <Button
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "@string/favorites"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
