<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUp"
    android:orientation="vertical" 
    android:gravity = "center"
    android:background = "@drawable/chevron_background">
    
    <LinearLayout
         android:background="#96ffffff"
    	android:orientation="vertical"
    	android:gravity="center_horizontal"
    	android:layout_width= "250dp"
    	android:layout_height= "600dp">
    	
       <ImageView
       android:layout_width="wrap_content"
       android:layout_height= "wrap_content"
       android:src="@drawable/register"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop = "20dp"/>
    
       <EditText
       android:id="@+id/name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="text|textNoSuggestions"
       android:hint="@string/name"
       android:layout_gravity="center_horizontal"
       android:textColor="#c03b72"
       android:textSize = "25sp"
       android:layout_marginTop = "-20dp"
       />
        
         <EditText
       android:id="@+id/email"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textEmailAddress|textNoSuggestions"
       android:hint="@string/email"
       android:layout_gravity="center_horizontal"
       android:textColor="#c03b72"
       android:textSize = "25sp"
       />
         
          <EditText
       android:id="@+id/password"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textPassword|textNoSuggestions"
       android:hint="@string/password"
       android:layout_gravity="center_horizontal"
       android:textColor="#c03b72"
       android:textSize = "25sp"
       />
          
          <EditText
       android:id="@+id/password2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textPassword|textNoSuggestions"
       android:hint="@string/password2"
       android:layout_gravity="center_horizontal"
       android:textColor="#c03b72"
       android:textSize = "25sp"
       />
          
        <Button 
      android:id ="@+id/signup"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/button_signup"
       />
         </LinearLayout>
        
</LinearLayout>
